syntax = "proto3";

import "google/protobuf/any.proto";

package chromeperf.engine;

message ErrorMessage {
  string reason = 1;
  string message = 2;
}


// A Task is a representation of work with payload (either input or output), a
// status, and a type.
message Task {
  // A per-graph unique ID.
  string id = 1;

  enum TaskState {
    UNSPECIFIED_TASKSTATE = 0;
    PENDING = 1;
    ONGOING = 2;
    FAILED = 3;
    COMPLETED = 4;
    CANCELLED = 5;
  }
  TaskState state = 2;

  // See <TODO> for the list of possible task types.
  string type = 3;

  // The payload for this task.  The exact type depends on the task; for example
  // a "find isolate" task will have a different payload to a "update monorail
  // issue" task.
  google.protobuf.Any payload = 4;
}
